Fixing Pin overlapping with Quiz issue

--- a/style.css
+++ b/style.css
@@ -1700,6 +1700,8 @@ h1 {
     font-size: 16px;
     weight: 400;
     margin-top: 10vh;
+    z-index: 20000;
+    position: relative;
 }
 
 #two .quizheader {
@@ -2179,6 +2181,7 @@ h1 {
 
 
 /* Story four */
+
 #four .talkbubble {
     width: 80%;
     height: 100vh;
